Fix the mobile warehouse anbd label spacing

--- a/src/Components/WarehouseList/WarehouseList.scss
+++ b/src/Components/WarehouseList/WarehouseList.scss
@@ -32,7 +32,7 @@
 
         &__title {
             flex: 1;
-
+            margin-top: 1.5rem;
             h1 {
                 font-size: 2.5rem;
             }
@@ -186,6 +186,7 @@
 
                 &__mobileonly {
                     color: $secondary-slate;
+                    padding-bottom: 0.5rem;
                     @include tablet-and-desktop {
                         display: none;
                     }
@@ -203,8 +204,6 @@
                 }
 
                 &__namelink {
-                    margin-top: -7%;
-
                     @include tablet-and-desktop {
                         margin-top: 0px;
                     }
